--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "nuxt": "^3.4.3",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "vue-router": "^4.2.1"
   }
 }
